data/issues_nolabel/nolabel_test_16960.txt
Build error introduced by 1baac78627. Can't build sources (master).

System information

Have I written custom code (as opposed to using a stock example script provided in TensorFlow): NO
OS Platform and Distribution (e.g., Linux Ubuntu 16.04): Debian Jessie
TensorFlow installed from (source or binary): Source
TensorFlow version (use command below): Master
Python version: 2.7.14
Bazel version (if compiling from source): 0.10.0
GCC/Compiler version (if compiling from source): GCC 4.9.2-10
CUDA/cuDNN version: Cuda8 / Cudnn7
GPU model and memory: 1080Ti
Exact command to reproduce:

git clone https://github.com/tensorflow/tensorflow .
export PYTHON_BIN_PATH=/path/to/python ## python 2.7.14
export USE_DEFAULT_PYTHON_LIB_PATH=1
export TF_NEED_JEMALLOC=1
export TF_NEED_GCP=0
export TF_NEED_HDFS=1
export TF_ENABLE_XLA=1
export TF_NEED_OPENCL=0
export TF_NEED_S3=0
export TF_NEED_GDR=0
export TF_NEED_VERBS=0
export TF_NEED_OPENCL_SYCL=0
export TF_NEED_CUDA=1
export TF_CUDA_VERSION=8.0
export CUDA_TOOLKIT_PATH=/path/to/cuda
export TF_CUDNN_VERSION=7
export CUDNN_INSTALL_PATH=/path/to/cudnn
export TF_CUDA_COMPUTE_CAPABILITIES="3.5,5.2,6.0,6.1"
export TF_CUDA_CLANG=0
export GCC_HOST_COMPILER_PATH=/path/to/gcc
export TF_NEED_MPI=1
export MPI_HOME=/path/to/openmpi
export CC_OPT_FLAGS="-march=native"
export TF_SET_ANDROID_WORKSPACE=0
./configure
bazel build --config=mkl --config=opt --config=cuda \
          //tensorflow/tools/pip_package:build_pip_package

Describe the problem
Failure to build sources:
ERROR: /opt/tensorflow/tensorflow/core/BUILD:2077:1: C++ compilation of rule '//tensorflow/core:core_cpu_impl' failed (Exit 1)
In file included from tensorflow/core/common_runtime/threadpool_device.cc:32:0:
./tensorflow/core/common_runtime/mkl_cpu_allocator.h: In member function 'virtual void tensorflow::MklCPUAllocator::AddAllocVisitor(tensorflow::VisitableAllocator::Visitor)':
./tensorflow/core/common_runtime/mkl_cpu_allocator.h:123:17: error: 'class tensorflow::Allocator' has no member named 'AddAllocVisitor'
     allocator_->AddAllocVisitor(visitor);
                 ^
./tensorflow/core/common_runtime/mkl_cpu_allocator.h: In member function 'virtual void tensorflow::MklCPUAllocator::AddFreeVisitor(tensorflow::VisitableAllocator::Visitor)':
./tensorflow/core/common_runtime/mkl_cpu_allocator.h:127:17: error: 'class tensorflow::Allocator' has no member named 'AddFreeVisitor'
     allocator_->AddFreeVisitor(visitor);
                 ^

Class MklCPUAllocator has a member allocator_ which is of type tensorflow::Allocator which does not have the member functions accessed.